# 3DOF_manipulator_with_ROS

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/myroboticarm/lib/myroboticarm/: simple_action_client  simple_action_server  simple_moveit_interface  simple_subscriber
install/myroboticarm/share/myroboticarm/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/myroboticarm_remote/lib/: task_server.py
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/myroboticarm/: package.xml  setup.cfg  setup.py
src/myroboticarm_controller/: CMakeLists.txt
src/myroboticarm_controller/launch/: controller.launch.py
src/myroboticarm_description_cpp/: CMakeLists.txt  package.xml
src/myroboticarm_description_cpp/launch/: gazebo.launch.py
src/myroboticarm_description_cpp/meshes/: claw_support.dae  left_finger.dae  pi_camera.dae  plate.dae  round_plate.dae  triangular_link.dae  vertical_drive_arm.dae
src/myroboticarm_description_cpp/urdf/: myroboticarm.urdf.xacro
src/myroboticarm_moveit/: CMakeLists.txt
src/myroboticarm_moveit/config/: initial_positions.yaml  myroboticarm.srdf
src/myroboticarm_moveit/launch/: moveit.launch.py
src/myroboticarm_moveit/rviz/: moveit_planning_config.rviz
src/myroboticarm_msgs/: CMakeLists.txt
src/myroboticarm_msgs/srv/: QuaterToEu.srv
src/myroboticarm_remote/: CMakeLists.txt
src/myroboticarm_utils/: CMakeLists.txt  package.xml
src/myroboticarm_utils/myroboticarm_utils/: angle_conversion.py
(+173 files in other folders)
